--- a/config/database.yml
+++ b/config/database.yml
@@ -3,8 +3,8 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  user: <%= ENV['DB_USER'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  user: <%= ENV["DB_USER"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -20,4 +20,4 @@ production:
   <<: *default
   database: product_control_api_production
   username: product_control_api
-  password: <%= ENV['DB_PASSWORD'] %>
+  password: <%= ENV["DB_PASSWORD"] %>
